[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Yao Fu <fubupc@gmail.com>"]
description = "A key-value store"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
either = "1.13.0"
failure = "0.1.8"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tempfile = "3.8.0"
walkdir = "2.4.0"
